--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
