--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
-    "deploy:dev": "pm2 start ecosystem.config.js --only dev"
+    "deploy:dev": "pm2 start ecosystem.config.js --only dev",
+    "docker:build": "docker-compose build",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose stop"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
