--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.7'
 
 services:
-  proxy:
-    image: nginx:alpine
-    container_name: proxy
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: 'unless-stopped'
-    networks:
-      - backend
+  # proxy:
+  #   image: nginx:alpine
+  #   container_name: proxy
+  #   ports:
+  #     - '80:80'
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #   restart: 'unless-stopped'
+  #   networks:
+  #     - backend
   server:
     build:
       context: ./
       target: development-build-stage
       dockerfile: Dockerfile
-    container_name: server
+    container_name: tutis_server
     ports:
       - '3000:3000'
     volumes:
@@ -26,18 +26,19 @@ services:
     networks:
       - backend
     links:
-      - mysql
+      - postgres
     depends_on:
-      - mysql
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
+      - postgres
+
+  postgres:
+    image: postgres:14.3
+    container_name: postgres
     environment:
-      MYSQL_ROOT_USER: root
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: test
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: tutis
     ports:
-      - '3306:3306'
+      - '5432:5432'
     networks:
       - backend
 
