--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev",
     "docker:build": "docker-compose build",
-    "docker:run": "docker-compose up -d",
+    "docker:run": "docker-compose up",
     "docker:stop": "docker-compose stop"
   },
   "dependencies": {
