--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
+    "coinkey": "^3.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -40,6 +41,7 @@
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
+    "web3": "^1.7.3",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
