--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.13.1",
     "coinkey": "^3.0.0",
     "compression": "^1.7.4",
+    "config": "^3.3.7",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
@@ -44,6 +45,7 @@
     "sequelize": "^6.6.5",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
+    "twilio": "^3.80.0",
     "uuid": "^8.3.2",
     "web3": "^1.7.3",
     "winston": "^3.3.3",
