--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,11 @@ services:
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
       # PGADMIN_PORT: ${PGADMIN_PORT}
       PGADMIN_HOST: ${PGADMIN_HOST}
+      POSTGRES_PORT: ${DB_PORT}
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE}
 
   portainer:
     image: portainer/portainer
@@ -73,12 +78,12 @@ services:
       - backend
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      # - portainer_data:/data
       - ./portainer:/data
       - /etc/localtime:/etc/localtime:ro
 
   redis:
-    image: redis
+    image: redis:7.0.2-alpine
     container_name: tutis_redis
     ports:
       - '6379:6379'
@@ -86,25 +91,21 @@ services:
     networks:
       - backend
     volumes:
-      - redis_data:/data
+      # - redis_data:/data
       - /etc/localtime:/etc/localtime:ro
       - ./redis:/data
 
-  redis-commander:
-    image: rediscommander/redis-commander
-    container_name: tutis_redis-commander
-    ports:
-      - '8081:8081'
-    restart: 'unless-stopped'
-    networks:
-      - backend
-    environment:
-      REDIS_HOSTS: host.docker.internal
-      REDIS_PORT: 6379
-      REDIS_TLS: false
-      REDIS_SCANCOUNT: 1000
-      REDIS_DBINDEX: 0
-      REDIS_DBINDEXES: 0
+  # redis-commander:
+  #   image: rediscommander/redis-commander
+  #   container_name: tutis_redis-commander
+  #   ports:
+  #     - '8081:8081'
+  #   restart: 'unless-stopped'
+  #   networks:
+  #     - backend
+  #   environment:
+  #     REDIS_HOSTS: redis
+  #     REDIS_PORT: 6379
 
   kafka:
     image: wurstmeister/kafka
@@ -156,7 +157,7 @@ networks:
 volumes:
   data:
     driver: local
-  portainer_data:
-    driver: local
-  redis_data:
-    driver: local
+  # portainer_data:
+  #   driver: local
+  # redis_data:
+  #   driver: local
